--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Drill</title>
+    <title>French Drill</title>
     <style>
         body { font-family: Arial, sans-serif; }
         #level { position: absolute; top: 10px; right: 10px; font-size: 30px; font-weight: bold; margin-bottom: 20px; }
-        #question { margin-top: 40px; margin-bottom: 50px; font-size: 40px; }
+        #question { margin-top: 40px; margin-bottom: 50px; font-size: 30px; }
         #questionContainer { margin-top: 90px; }
         #questionImage { 
             max-width: 400px; 
@@ -17,7 +17,7 @@
             display: block; 
             margin: 0 auto; 
         }
-        .choice { margin: 20px 0; padding: 30px; font-size: 28px; border: 3px solid #ccc; cursor: pointer; }
+        .choice { margin: 10px 0; padding: 10px; font-size: 14px; border: 3px solid #ccc; cursor: pointer; }
         .choice:hover { background-color: #f0f0f0; }
     </style>
 </head>
