--- a/index.html
+++ b/index.html
@@ -2991,7 +2991,227 @@
     },
 
 
+//french phrases
 
+    {
+        "question": "Where is the bathroom?",
+        "answer": "Où sont les toilettes?",
+        "options": ["Où sont les toilettes?", "Quelle heure est-il?", "Comment allez-vous?", "Où habitez-vous?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can you help me?",
+        "answer": "Pouvez-vous m'aider?",
+        "options": ["Pouvez-vous m'aider?", "Pouvez-vous répéter?", "Je vous en prie.", "J'aime cette chanson."],
+        "imageUrl": ""
+    },
+    {
+        "question": "I would like some water.",
+        "answer": "Je voudrais de l'eau.",
+        "options": ["Je voudrais de l'eau.", "Je cherche le métro.", "Je suis fatigué.", "Je veux du pain."],
+        "imageUrl": ""
+    },
+    {
+        "question": "I am learning French.",
+        "answer": "J'apprends le français.",
+        "options": ["J'apprends le français.", "Je parle un peu.", "Je suis perdu.", "Je suis en vacances."],
+        "imageUrl": ""
+    },
+    {
+        "question": "How much does it cost?",
+        "answer": "Ça coûte combien?",
+        "options": ["Ça coûte combien?", "Comment ça va?", "C'est combien de personnes?", "Combien de temps?"],
+        "imageUrl": ""
+    },
+
+
+
+    {
+        "question": "I don’t understand.",
+        "answer": "Je ne comprends pas.",
+        "options": ["Je ne comprends pas.", "Je ne sais pas.", "Je suis d'accord.", "Je veux comprendre."],
+        "imageUrl": ""
+    },
+    {
+        "question": "Do you speak English?",
+        "answer": "Parlez-vous anglais?",
+        "options": ["Parlez-vous anglais?", "Pouvez-vous m'aider?", "Comment vous appelez-vous?", "Est-ce loin?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "What time is it?",
+        "answer": "Quelle heure est-il?",
+        "options": ["Quelle heure est-il?", "Où est la gare?", "C'est combien?", "Comment allez-vous?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "I’m tired.",
+        "answer": "Je suis fatigué.",
+        "options": ["Je suis fatigué.", "J'ai faim.", "Je suis désolé.", "J'ai soif."],
+        "imageUrl": ""
+    },
+    {
+        "question": "I am looking for the train station.",
+        "answer": "Je cherche la gare.",
+        "options": ["Je cherche la gare.", "Je vais à l'hôtel.", "Je veux un billet.", "Je suis en retard."],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can I have the bill, please?",
+        "answer": "L'addition, s'il vous plaît.",
+        "options": ["L'addition, s'il vous plaît.", "Un café, s'il vous plaît.", "Pouvez-vous répéter?", "Où est la carte?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "It’s nice to meet you.",
+        "answer": "Enchanté.",
+        "options": ["Enchanté.", "Au revoir.", "Comment ça va?", "Ça coûte combien?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "How are you?",
+        "answer": "Comment ça va?",
+        "options": ["Comment ça va?", "Comment vous appelez-vous?", "Où habitez-vous?", "Que voulez-vous?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "I need a doctor.",
+        "answer": "J'ai besoin d'un médecin.",
+        "options": ["J'ai besoin d'un médecin.", "Je vais à la pharmacie.", "C'est urgent.", "Pouvez-vous m'aider?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "I love this song.",
+        "answer": "J'aime cette chanson.",
+        "options": ["J'aime cette chanson.", "Je chante bien.", "J'écoute la radio.", "Je veux danser."],
+        "imageUrl": ""
+    },
+
+
+
+    {
+        "question": "I am looking for a pharmacy nearby.",
+        "answer": "Je cherche une pharmacie à proximité.",
+        "options": ["Je cherche une pharmacie à proximité.", "Je vais chez le médecin.", "Où est la gare?", "Pouvez-vous m'aider?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Could you repeat that more slowly, please?",
+        "answer": "Pouvez-vous répéter plus lentement, s'il vous plaît?",
+        "options": ["Pouvez-vous répéter plus lentement, s'il vous plaît?", "Je ne comprends pas.", "Parlez-vous anglais?", "Pouvez-vous m'aider?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "What is the best way to get to the airport?",
+        "answer": "Quel est le meilleur moyen pour aller à l'aéroport?",
+        "options": ["Quel est le meilleur moyen pour aller à l'aéroport?", "Où est l'aéroport?", "Je cherche un taxi.", "Je veux aller en avion."],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can you recommend a good restaurant nearby?",
+        "answer": "Pouvez-vous recommander un bon restaurant à proximité?",
+        "options": ["Pouvez-vous recommander un bon restaurant à proximité?", "Où est le marché?", "Je veux un café.", "L'addition, s'il vous plaît."],
+        "imageUrl": ""
+    },
+    {
+        "question": "I would like to reserve a table for two at 8 PM.",
+        "answer": "Je voudrais réserver une table pour deux à 20 heures.",
+        "options": ["Je voudrais réserver une table pour deux à 20 heures.", "Je veux un menu.", "C'est pour combien de personnes?", "À quelle heure?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Excuse me, is there a supermarket around here?",
+        "answer": "Excusez-moi, y a-t-il un supermarché dans le coin?",
+        "options": ["Excusez-moi, y a-t-il un supermarché dans le coin?", "Où est la pharmacie?", "Je cherche la gare.", "C'est loin d'ici?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Do you know how to get to the city center?",
+        "answer": "Savez-vous comment aller au centre-ville?",
+        "options": ["Savez-vous comment aller au centre-ville?", "Où est l'hôtel?", "C'est à quelle distance?", "Je veux un taxi."],
+        "imageUrl": ""
+    },
+    {
+        "question": "What time does the train leave for Paris?",
+        "answer": "À quelle heure part le train pour Paris?",
+        "options": ["À quelle heure part le train pour Paris?", "Où est la gare?", "Je veux acheter un billet.", "C'est à quelle heure?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Is it possible to pay by credit card?",
+        "answer": "Est-il possible de payer par carte de crédit?",
+        "options": ["Est-il possible de payer par carte de crédit?", "Je veux payer en espèces.", "Combien ça coûte?", "Je voudrais l'addition."],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can you tell me more about this museum?",
+        "answer": "Pouvez-vous me parler davantage de ce musée?",
+        "options": ["Pouvez-vous me parler davantage de ce musée?", "Où est l'exposition?", "Je veux acheter un billet.", "C'est fermé aujourd'hui?"],
+        "imageUrl": ""
+    },
+
+
+
+    {
+        "question": "I would like to book a room with a sea view.",
+        "answer": "Je voudrais réserver une chambre avec vue sur la mer.",
+        "options": ["Je voudrais réserver une chambre avec vue sur la mer.", "Où est la réception?", "À quelle heure est le check-in?", "Je cherche l'ascenseur."],
+        "imageUrl": ""
+    },
+    {
+        "question": "What documents do I need to fill out?",
+        "answer": "Quels documents dois-je remplir?",
+        "options": ["Quels documents dois-je remplir?", "Pouvez-vous m'aider à lire ceci?", "C'est pour quoi?", "Où dois-je signer?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Is there public transportation nearby?",
+        "answer": "Y a-t-il des transports en commun à proximité?",
+        "options": ["Y a-t-il des transports en commun à proximité?", "Où est la gare routière?", "Je cherche un taxi.", "Pouvez-vous appeler un bus?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can I change this item for a different size?",
+        "answer": "Puis-je échanger cet article pour une autre taille?",
+        "options": ["Puis-je échanger cet article pour une autre taille?", "C'est en promotion?", "Où est la cabine d'essayage?", "Je voudrais acheter ça."],
+        "imageUrl": ""
+    },
+    {
+        "question": "What are the opening hours of the museum?",
+        "answer": "Quels sont les horaires d'ouverture du musée?",
+        "options": ["Quels sont les horaires d'ouverture du musée?", "Pouvez-vous me parler du musée?", "C'est combien l'entrée?", "Où est la sortie?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can I take this bus to go to the airport?",
+        "answer": "Puis-je prendre ce bus pour aller à l'aéroport?",
+        "options": ["Puis-je prendre ce bus pour aller à l'aéroport?", "Est-ce le bon arrêt?", "Où est le terminus?", "À quelle heure part ce bus?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Is there Wi-Fi available in the hotel?",
+        "answer": "Y a-t-il du Wi-Fi disponible à l'hôtel?",
+        "options": ["Y a-t-il du Wi-Fi disponible à l'hôtel?", "Où est le téléphone?", "Je veux réserver une chambre.", "Combien coûte une nuit?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "What is the local specialty in this region?",
+        "answer": "Quelle est la spécialité locale dans cette région?",
+        "options": ["Quelle est la spécialité locale dans cette région?", "Où est le marché?", "Est-ce épicé?", "Je cherche un restaurant."],
+        "imageUrl": ""
+    },
+    {
+        "question": "Do you have any recommendations for things to do?",
+        "answer": "Avez-vous des recommandations pour des activités à faire?",
+        "options": ["Avez-vous des recommandations pour des activités à faire?", "Où est l'office de tourisme?", "Qu'est-ce qu'on peut voir ici?", "C'est loin d'ici?"],
+        "imageUrl": ""
+    },
+    {
+        "question": "Can I get a receipt, please?",
+        "answer": "Puis-je avoir un reçu, s'il vous plaît?",
+        "options": ["Puis-je avoir un reçu, s'il vous plaît?", "C'est combien?", "Où dois-je payer?", "Je veux retourner cet article."],
+        "imageUrl": ""
+    },
 
 
 
