--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,139 @@
 
 
 
+
+
+
+
+
+// javannaise lyrics
+
+    {
+        "question": "What does 'J'avoue j'en ai bavé pas vous mon amour' mean in English?",
+        "answer": "I admit I struggled, not you, my love",
+        "options": [
+            "I am dancing with you, my love",
+            "I heard your love in the wind",
+            "I admit I struggled, not you, my love",
+            "I admit I was happy with you, my love"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What is the English translation of 'Avant d'avoir eu vent de vous mon amour'?",
+        "answer": "Before I heard of you, my love",
+        "options": [
+            "Before I met you, my love",
+            "Before I heard of you, my love",
+            "Before I danced with you, my love",
+            "Before I sang for you, my love"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What does 'En dansant la Javanaise' mean in English?",
+        "answer": "While dancing the Javanaise",
+        "options": [
+            "While singing the Javanaise",
+            "While writing the Javanaise",
+            "While dreaming of Javanaise",
+            "While dancing the Javanaise"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "How would you translate 'Nous nous aimions le temps d'une chanson' into English?",
+        "answer": "We loved each other for the duration of a song",
+        "options": [
+            "We sang to each other during a song",
+            "We loved each other forever",
+            "We danced together through the night",
+            "We loved each other for the duration of a song"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What does 'À votre avis qu'avons-nous vu de l'amour?' mean in English?",
+        "answer": "In your opinion, what have we seen of love?",
+        "options": [
+            "What have you shown me about love?",
+            "Do you think love is true?",
+            "In your opinion, what have we seen of love?",
+            "What is your opinion about love?"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What is the English meaning of 'Hélas avril en vain me voue à l'amour'?",
+        "answer": "Alas, April vainly devotes me to love",
+        "options": [
+            "April sings softly of love",
+            "Alas, April vainly devotes me to love",
+            "April is a cruel month for love",
+            "Love blooms in April"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "How do you translate 'La vie ne vaut d'être vécue sans amour' into English?",
+        "answer": "Life is not worth living without love",
+        "options": [
+            "Life is a song about love",
+            "Without love, there is no spring",
+            "Love is the essence of life",
+            "Life is not worth living without love"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What does 'Mais c'est vous qui l'avez voulu mon amour' mean in English?",
+        "answer": "But it is you who wanted it, my love",
+        "options": [
+            "But it is me who chose this love",
+            "But it is you who wanted it, my love",
+            "But you gave me love, my dear",
+            "But you sang it for me, my love"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What is the English meaning of 'De vous à moi vous m'avez eu mon amour'?",
+        "answer": "From you to me, you got me, my love",
+        "options": [
+            "You sang for me, my love",
+            "You danced with me, my love",
+            "From you to me, you got me, my love",
+            "From me to you, I gave you love"
+        ],
+        "imageUrl": ""
+    },
+    {
+        "question": "What does 'Ne vous déplaise' mean in English?",
+        "answer": "If it pleases you not",
+        "options": [
+            "If it pleases you not",
+            "If you dance with me",
+            "If it pleases you",
+            "If you sing for me"
+        ],
+        "imageUrl": ""
+    },
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
+
+
     {
         "question": "I exit the building quickly. Je ____ rapidement du bâtiment.",
         "answer": "sors",
@@ -3097,6 +3230,8 @@
         "options": ["Je ne comprends pas.", "Pouvez-vous m'aider?", "Pouvez-vous répéter plus lentement, s'il vous plaît?", "Parlez-vous anglais?"],
         "imageUrl": ""
     },
+
+//song javvanaise
 
 
 
